# pokewatch

./: .airflowignore  .dockerignore  .env.bak  .env.example  .gitignore  .pre-commit-config.yaml  API_USAGE.md  DOCKER.md  IMPLEMENTATION_SUMMARY.md  MICROSERVICES_ARCHITECTURE.md  MICROSERVICES_DEPLOYMENT.md  MICROSERVICES_TRANSITION_PLAN.md  MIGRATION_GUIDE.md  MLOPS.md  MLproject  Makefile  PHASE3_WEEK1_COMPLETE.md  QUICK_REFERENCE.md  README.md  TRAINING_DOCKER.md  WEEK1_IMPLEMENTATION_SUMMARY.md  bentofile.yaml  docker-compose.yml  dvc.yaml  main.py  phase3_week2_plan.md  pyproject.toml  requirements.txt  run_tests.sh  setup.sh  test_baseline.sh  test_client.py  top_10_cards.json
.dvc/: config
.github/scripts/: version.sh
.github/workflows/: bento-build.yml  deploy.yaml  docker-build.yml  quality.yml  release.yml  test.yml
.zen/: config.yaml
airflow/dags/: .airflowignore  ml_pipeline.py
config/: cards.yaml  settings.yaml
data/: .gitignore
data/processed/: sv2a_pokemon_card_151.parquet
docker/: Dockerfile  api.Dockerfile  batch-pipeline.Dockerfile  bento.Dockerfile  collector.Dockerfile  decision-service.Dockerfile  model-service.Dockerfile  training.Dockerfile
docs/: README.md  REORGANIZATION_SUMMARY.md  api_contract_bentoml.md  bentoml_guide.md  pipeline_guide.md
k8s/: airflow-pv.yaml  airflow-rbac.yaml  airflow-values.yaml  api-deployment.yaml  api-service.yaml  decision-service-deployment.yaml  decision-service-service.yaml  grafana-configmap.yaml  grafana-deployment.yaml  hpa.yaml  ml-secrets-live.yaml  ml-secrets.yaml  model-service-deployment.yaml  model-service-hpa.yaml  model-service-service.yaml  namespace.yaml  prometheus-configmap.yaml  prometheus-deployment.yaml
logs/: logs.txt
mlflow_data/: mlflow.db
pipelines/: __init__.py  ml_pipeline.py  steps.py
scripts/: build_bento.sh  build_microservices.sh  collect_daily_prices.sh  deploy_k8s.sh  deploy_monitoring.sh  diagnose_pods.sh  k8s_commands.sh  manage_api_keys.py  microservices_commands.sh  monitor_k8s.sh  quick_verify.sh  read_parquet.py  schedule_pipeline.sh  setup_vm.sh  setup_zenml.sh  test_api.py  test_performance.py  train_baseline_docker.sh  train_baseline_docker_clean.sh  update_top_cards.py  verify_k8s.sh  verify_week2.sh  verify_with_uv.sh
(+194 files in other folders)
