[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pokewatch"]

[project]
name = "pokewatch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pyyaml",
    "python-dotenv",
    "requests",
    "pandas",
    "numpy",
    "pyarrow",
    "pytest",
    "pytest-mock",
    "httpx",
    "mlflow",
    "matplotlib",
    "dvc[s3]",
]
