[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pokewatch"]

[project]
name = "pokewatch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "pyarrow>=14.0.0",
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "pytest-cov",
    "httpx>=0.25.0",
    "mlflow>=2.10.0",
    "matplotlib>=3.8.0",
    "dvc[s3]",
    "bentoml>=1.2.0",
    "zenml[server]>=0.55.0",
    "prometheus-client>=0.19.0",
    "evidently>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "mypy",
    "pre-commit",
]
